--- a/prodan_godinshin/chunnubababooks/milad_sharif_chunnu_baba.html
+++ b/prodan_godinshin/chunnubababooks/milad_sharif_chunnu_baba.html
@@ -252,7 +252,7 @@
                   <div class="content">
                     <div class="container">
                       <div class="shazarah-image">
-                          <img src="../img/milad_sharif.jpg" alt="">
+                          <img src="../../img/milad_sharif.jpg" alt="">
                       </div>
                     </div>
                   </div>
