--- a/prodan_godinshin/chunnubababooks/allah_paker_jikir_and_ojifa.html
+++ b/prodan_godinshin/chunnubababooks/allah_paker_jikir_and_ojifa.html
@@ -245,12 +245,12 @@
             <main class="py-2">
               <section class="container">
                   <div class="shazarah-section">
-                    <h2 class="p-2 global-header">মিলাদ শরীফ</span></h2>
+                    <h2 class="p-2 global-header">আল্লাহ পাকের জিকির ও আজিফা শরীফ</span></h2>
                     <!-- start of content list  -->
                     <div class="content">
                       <div class="container">
                         <div class="shazarah-image">
-                            <img src="../../img/milad_sharif.jpg" alt="">
+                            <img src="../../img/allahpaker_jikir.jpg" alt="">
                         </div>
                       </div>
                     </div>
