--- a/bishesh_alockpath/nobi_rasul/prothom_porbo.html
+++ b/bishesh_alockpath/nobi_rasul/prothom_porbo.html
@@ -244,7 +244,10 @@
             <main>
                 <section class="container">
                     <div class="shazarah-section">
-                        <h2 class="p-2 global-header">আধ্যাত্মিকতার গুরুত্ব</h2>
+                        <h2 class="p-2 global-header">
+                          <span class="sazaran-span">প্রথম পর্ব</span> <br>
+                          নবী রাসূলগণের জীবন থেকে শিক্ষা
+                        </h2>
                         <!-- start of content list  -->
                         <div class="content">
                             <div class="container">
@@ -495,3 +498,4 @@
    <script src="../../main.js"></script>
 </body>
 </html>
+
