--- a/bishesh_alockpath/nobi_rasul/prothom_porbo.html
+++ b/bishesh_alockpath/nobi_rasul/prothom_porbo.html
@@ -275,7 +275,7 @@
 
                <section class="shazarah-section" id="bazzik_attik_knowledge">
                 <div class="container">
-                    <h2 class="p-2 global-header">
+                    <h2 class="global-header">
                       বাহ্যিক জ্ঞান ও আত্মিক জ্ঞান
                     </h2>
                   <div class="shazarah-content">
